// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SAPConnectionForm - Snapshot Tests > matches snapshot for initial state 1`] = `
<div>
  <main
    aria-label="SAP Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      class="w-full max-w-2xl"
    >
      <div
        class="mb-8 sm:mb-12 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          class="w-full"
        >
          <ol
            class="
          flex items-center
          justify-between
        "
            role="list"
          >
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  Welcome
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  P6
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  aria-current="step"
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    active
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        text-[var(--orion-bg-primary)]
                        
                      "
                  >
                    3
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      text-[var(--orion-cyan)]
                      
                      
                    "
                >
                  SAP
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    4
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Projects
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    5
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Complete
                </span>
              </div>
            </li>
          </ol>
          <p
            class="sr-only"
          >
            Step 
            3
             of 
            5
            : SAP
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 mb-4"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-emerald
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            FINANCE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 3 OF 5
          </span>
        </div>
        <h1
          class="orion-h1 text-[var(--orion-text-primary)] mb-3"
        >
          Connect to 
          <span
            class="text-gradient-emerald"
          >
            SAP
          </span>
        </h1>
        <p
          class="text-[var(--orion-text-secondary)] max-w-lg mx-auto"
        >
          Enter your SAP HANA or RFC credentials to sync financial data including budgets, actuals, and commitments.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-emerald)] animate-scale-in delay-200
      "
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-emerald)]/10 border border-[var(--orion-emerald)]/30 flex items-center justify-center glow-box-emerald"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-emerald)]"
            >
              SAP
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              SAP HANA / S/4HANA
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise financial data
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_5q_-host-url"
            >
              Host URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_5q_-host-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
              id="_r_5q_-host-url"
              placeholder="https://hana.company.com:30015"
              required=""
              type="url"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_5q_-host-url-hint"
            >
              SAP HANA database endpoint
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_5q_-system-id"
              >
                System ID (SID)
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_5q_-system-id-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_5q_-system-id"
                placeholder="PRD"
                required=""
                type="text"
                value=""
              />
              <p
                class="orion-hint"
                id="_r_5q_-system-id-hint"
              >
                3-character system ID
              </p>
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_5q_-client"
              >
                Client
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_5q_-client-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_5q_-client"
                placeholder="100"
                required=""
                type="text"
                value=""
              />
              <p
                class="orion-hint"
                id="_r_5q_-client-hint"
              >
                SAP client number
              </p>
            </div>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_5q_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_5q_-username"
                placeholder="sapuser"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_5q_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_5q_-password"
                required=""
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-emerald)]/30 hover:border-[var(--orion-emerald)] hover:text-[var(--orion-emerald)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
      </div>
      <div
        class="mt-8 flex gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          opacity-50 cursor-not-allowed pointer-events-none
          flex-1
        "
          disabled=""
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 transition-transform group-hover:translate-x-1"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline"
          href="#"
        >
          SAP Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;

exports[`SAPConnectionForm - Snapshot Tests > matches snapshot with success result 1`] = `
<div>
  <main
    aria-label="SAP Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      class="w-full max-w-2xl"
    >
      <div
        class="mb-8 sm:mb-12 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          class="w-full"
        >
          <ol
            class="
          flex items-center
          justify-between
        "
            role="list"
          >
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  Welcome
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  P6
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  aria-current="step"
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    active
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        text-[var(--orion-bg-primary)]
                        
                      "
                  >
                    3
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      text-[var(--orion-cyan)]
                      
                      
                    "
                >
                  SAP
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    4
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Projects
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    5
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Complete
                </span>
              </div>
            </li>
          </ol>
          <p
            class="sr-only"
          >
            Step 
            3
             of 
            5
            : SAP
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 mb-4"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-emerald
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            FINANCE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 3 OF 5
          </span>
        </div>
        <h1
          class="orion-h1 text-[var(--orion-text-primary)] mb-3"
        >
          Connect to 
          <span
            class="text-gradient-emerald"
          >
            SAP
          </span>
        </h1>
        <p
          class="text-[var(--orion-text-secondary)] max-w-lg mx-auto"
        >
          Enter your SAP HANA or RFC credentials to sync financial data including budgets, actuals, and commitments.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-emerald)] animate-scale-in delay-200
      "
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-emerald)]/10 border border-[var(--orion-emerald)]/30 flex items-center justify-center glow-box-emerald"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-emerald)]"
            >
              SAP
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              SAP HANA / S/4HANA
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise financial data
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_66_-host-url"
            >
              Host URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_66_-host-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
              id="_r_66_-host-url"
              placeholder="https://hana.company.com:30015"
              required=""
              type="url"
              value="https://hana.acme-epc.com:30015"
            />
            <p
              class="orion-hint"
              id="_r_66_-host-url-hint"
            >
              SAP HANA database endpoint
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_66_-system-id"
              >
                System ID (SID)
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_66_-system-id-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_66_-system-id"
                placeholder="PRD"
                required=""
                type="text"
                value="PRD"
              />
              <p
                class="orion-hint"
                id="_r_66_-system-id-hint"
              >
                3-character system ID
              </p>
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_66_-client"
              >
                Client
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_66_-client-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_66_-client"
                placeholder="100"
                required=""
                type="text"
                value="100"
              />
              <p
                class="orion-hint"
                id="_r_66_-client-hint"
              >
                SAP client number
              </p>
            </div>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_66_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_66_-username"
                placeholder="sapuser"
                required=""
                type="text"
                value="sapuser"
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_66_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_66_-password"
                required=""
                type="password"
                value="sapsecret123"
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-emerald)]/30 hover:border-[var(--orion-emerald)] hover:text-[var(--orion-emerald)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
        <div
          class="mt-6"
        >
          <div
            class="p-4 rounded-xl border border-[var(--orion-emerald)]/30 bg-[var(--orion-emerald)]/10 animate-scale-in"
            role="alert"
          >
            <div
              class="flex items-center gap-3"
            >
              <div
                class="w-10 h-10 rounded-lg bg-[var(--orion-emerald)]/20 flex items-center justify-center"
              >
                <svg
                  aria-hidden="true"
                  class="text-[var(--orion-emerald)]"
                  fill="none"
                  stroke="currentColor"
                  style="width: 20px; height: 20px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M5 13l4 4L19 7"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
              <div>
                <p
                  class="font-semibold text-[var(--orion-emerald)] font-display"
                >
                  Connection Successful
                </p>
                <div
                  class="flex flex-wrap gap-3 mt-1"
                >
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    156
                     tables accessible
                  </span>
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    HANA
                  </span>
                  <span
                    class="text-sm text-[var(--orion-text-secondary)] font-mono"
                  >
                    85
                    ms
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-8 flex gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1
        "
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 transition-transform group-hover:translate-x-1"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline"
          href="#"
        >
          SAP Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;

exports[`SAPConnectionForm - Snapshot Tests > matches snapshot with validation errors 1`] = `
<div>
  <main
    aria-label="SAP Connection Setup"
    class="min-h-screen flex flex-col items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      class="w-full max-w-2xl"
    >
      <div
        class="mb-8 sm:mb-12 animate-fade-in"
      >
        <nav
          aria-label="Progress"
          class="w-full"
        >
          <ol
            class="
          flex items-center
          justify-between
        "
            role="list"
          >
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  Welcome
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    completed
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        text-[var(--orion-bg-primary)]
                        
                        
                      "
                  >
                    <svg
                      aria-hidden="true"
                      class="w-4 h-4"
                      fill="none"
                      stroke="currentColor"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M5 13l4 4L19 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      />
                    </svg>
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      text-[var(--orion-emerald)]
                      
                    "
                >
                  P6
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    completed
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  aria-current="step"
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    active
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        text-[var(--orion-bg-primary)]
                        
                      "
                  >
                    3
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      text-[var(--orion-cyan)]
                      
                      
                    "
                >
                  SAP
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                flex-1
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    4
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Projects
                </span>
              </div>
              <div
                aria-hidden="true"
                class="
                    progress-line
                    flex-1 mx-2 sm:mx-4
                    
                    h-1
                  "
              />
            </li>
            <li
              class="
                flex items-center
                
              "
            >
              <div
                class="relative flex items-center"
              >
                <div
                  class="
                    progress-dot
                    flex items-center justify-center
                    w-8 h-8 sm:w-10 sm:h-10
                    
                    
                    transition-all duration-300 ease-orion-out
                  "
                >
                  <span
                    class="
                        font-mono text-sm font-semibold
                        
                        
                        text-[var(--orion-text-muted)]
                      "
                  >
                    5
                  </span>
                </div>
                <span
                  class="
                      absolute -bottom-6 left-1/2 -translate-x-1/2
                      whitespace-nowrap text-xs font-medium
                      
                      
                      text-[var(--orion-text-muted)]
                    "
                >
                  Complete
                </span>
              </div>
            </li>
          </ol>
          <p
            class="sr-only"
          >
            Step 
            3
             of 
            5
            : SAP
          </p>
        </nav>
      </div>
      <div
        class="text-center mb-8 animate-slide-up"
      >
        <div
          class="inline-flex items-center gap-2 mb-4"
        >
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-emerald
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            FINANCE
          </span>
          <span
            class="
        badge
        inline-flex items-center
        font-mono font-medium
        rounded-full
        badge-cyan
        px-3 py-1 text-sm gap-1.5
        
      "
          >
            STEP 3 OF 5
          </span>
        </div>
        <h1
          class="orion-h1 text-[var(--orion-text-primary)] mb-3"
        >
          Connect to 
          <span
            class="text-gradient-emerald"
          >
            SAP
          </span>
        </h1>
        <p
          class="text-[var(--orion-text-secondary)] max-w-lg mx-auto"
        >
          Enter your SAP HANA or RFC credentials to sync financial data including budgets, actuals, and commitments.
        </p>
      </div>
      <div
        class="
        glass-card-elevated
        p-4 sm:p-6
        
        
        transition-all duration-200 ease-orion-out
        p-6 sm:p-8 border-l-4 border-l-[var(--orion-emerald)] animate-scale-in delay-200
      "
      >
        <div
          class="flex items-center gap-3 mb-6 pb-6 border-b border-[var(--orion-border)]"
        >
          <div
            class="w-12 h-12 rounded-xl bg-[var(--orion-emerald)]/10 border border-[var(--orion-emerald)]/30 flex items-center justify-center glow-box-emerald"
          >
            <span
              class="text-lg font-bold font-mono text-[var(--orion-emerald)]"
            >
              SAP
            </span>
          </div>
          <div>
            <h2
              class="font-semibold text-[var(--orion-text-primary)] font-display"
            >
              SAP HANA / S/4HANA
            </h2>
            <p
              class="text-sm text-[var(--orion-text-muted)]"
            >
              Enterprise financial data
            </p>
          </div>
        </div>
        <form
          class="space-y-5"
        >
          <div
            class="orion-form-group"
          >
            <label
              class="orion-label"
              for="_r_60_-host-url"
            >
              Host URL
              <span
                aria-hidden="true"
                class="orion-required"
              >
                *
              </span>
            </label>
            <input
              aria-describedby="_r_60_-host-url-hint"
              aria-invalid="false"
              class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
              id="_r_60_-host-url"
              placeholder="https://hana.company.com:30015"
              required=""
              type="url"
              value=""
            />
            <p
              class="orion-hint"
              id="_r_60_-host-url-hint"
            >
              SAP HANA database endpoint
            </p>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_60_-system-id"
              >
                System ID (SID)
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_60_-system-id-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_60_-system-id"
                placeholder="PRD"
                required=""
                type="text"
                value=""
              />
              <p
                class="orion-hint"
                id="_r_60_-system-id-hint"
              >
                3-character system ID
              </p>
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_60_-client"
              >
                Client
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-describedby="_r_60_-client-hint"
                aria-invalid="false"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_60_-client"
                placeholder="100"
                required=""
                type="text"
                value=""
              />
              <p
                class="orion-hint"
                id="_r_60_-client-hint"
              >
                SAP client number
              </p>
            </div>
          </div>
          <div
            class="orion-form-grid"
          >
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_60_-username"
              >
                Username
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="username"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_60_-username"
                placeholder="sapuser"
                required=""
                type="text"
                value=""
              />
            </div>
            <div
              class="orion-form-group"
            >
              <label
                class="orion-label"
                for="_r_60_-password"
              >
                Password
                <span
                  aria-hidden="true"
                  class="orion-required"
                >
                  *
                </span>
              </label>
              <input
                aria-invalid="false"
                autocomplete="current-password"
                class="
          input-field
          px-4 py-2.5 text-base min-h-[44px]
          
          
          
          
        "
                id="_r_60_-password"
                required=""
                type="password"
                value=""
              />
            </div>
          </div>
          <div
            class="pt-2"
          >
            <button
              aria-busy="false"
              class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          w-full
          cursor-pointer
          border-[var(--orion-emerald)]/30 hover:border-[var(--orion-emerald)] hover:text-[var(--orion-emerald)]
        "
              type="submit"
            >
              <span>
                Test Connection
              </span>
            </button>
          </div>
        </form>
      </div>
      <div
        class="mt-8 flex gap-4 animate-slide-up delay-400"
      >
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-secondary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          cursor-pointer
          flex-1
        "
          type="button"
        >
          <span>
            <svg
              aria-hidden="true"
              class="mr-2"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 17l-5-5m0 0l5-5m-5 5h12"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            Back
          </span>
        </button>
        <button
          aria-busy="false"
          class="
          inline-flex items-center justify-center
          font-display font-semibold
          rounded-orion-sm
          transition-all duration-200 ease-orion-out
          focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
          btn-primary
          px-6 py-3 text-lg gap-3 min-h-[52px]
          
          opacity-50 cursor-not-allowed pointer-events-none
          flex-1
        "
          disabled=""
          type="button"
        >
          <span>
            Continue
            <svg
              aria-hidden="true"
              class="ml-2 transition-transform group-hover:translate-x-1"
              fill="none"
              stroke="currentColor"
              style="width: 20px; height: 20px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M13 7l5 5m0 0l-5 5m5-5H6"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </span>
        </button>
      </div>
      <p
        class="text-center text-sm text-[var(--orion-text-muted)] mt-6 font-mono animate-fade-in delay-600"
      >
        Need help? Check the
         
        <a
          class="text-[var(--orion-cyan)] hover:underline"
          href="#"
        >
          SAP Integration Guide
        </a>
      </p>
    </div>
  </main>
</div>
`;
